# oreno-genz-function

./: .gitignore  README.md  configure.ac
R/: genz.R
other/: genz.sh  plot.sh
src/: .gitignore  Genz.cpp  Genz.hpp  Makefile  Makefile.am  RandomNet.hpp  adjust_parameters.cpp  adjust_parameters.h  calc_theoretical.cpp  change_output.cpp  change_output.h  config.h  config.h.in  corner_expect.cpp  count_highbit.cpp  genz_test  genz_test.cpp  make_parameters.cpp  make_parameters.h  make_parameters.hpp  make_wafomc_parameters.cpp  make_wafomc_parameters.h  mt19937_64.hpp  saipack.hpp  saipack_digitalnet.cpp  simpleout.cpp  test_adjust.cpp  testpack.cpp  testpack.h  testpack_digitalnet.cpp
